fixed image flicker in chrome caused by including a transform near a column layout

--- a/app/_scss/_gallery.scss
+++ b/app/_scss/_gallery.scss
@@ -5,22 +5,20 @@
 
 .gallery {
   padding: 0 15px;
-  
-  @media (min-width: $screen-sm) {
-    column-count: 3;
-    column-gap: 5px;
-  }
-  
-  @media (min-width: $screen-lg) {
-    column-count: 4;
-  }
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 230vw;
+}
+
+.gallery-item {
+  width: 33.3%;
+  padding: 0 5px 5px;
 }
 
 .gallery-img {
-  display: inline-block;
   width: 100%;
   height: 0;
-  margin-bottom: 5px;
   transition: opacity .3s ease-out;
   position: relative;
   padding-bottom: 75%;
