--- a/app/_scss/_link.scss
+++ b/app/_scss/_link.scss
@@ -16,15 +16,15 @@ main, .nav-list {
       left: 0;
       background-color: $link-hover-color;
       visibility: hidden;
-      transform: scaleX(0) translateZ(0);
-      transition: all 0.3s ease-in-out 0s;
+      transform: scaleX(0);
+      transition: transform 0.3s ease-out;
     }
   
     &:hover,
     &:focus {
       &:before {
         visibility: visible;
-        transform: scaleX(1) translateZ(0);
+        transform: scaleX(1);
       }
     }
   }
